<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HosTaGe</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="capital_on">OFF</string>
    <string name="capital_off">ON</string>
	<string name="title_connection_info">Connection Info</string>
    <string name="status">Status</string>
    <string name="paranoid">Paranoid Mode</string>
    <string name="details">Connection info</string>
    <string name="not_connected">Not connected</string>
    <string name="attack">&#160;attack</string>
    <string name="attacks">&#160;attacks</string>
    <string name="secure">Secure</string>
    <string name="insecure">Insecure</string>
    <string name="logged">&#160;logged</string>
    <string name="recorded">&#160;recorded</string>
    <string name="zero_attacks">0 attacks recorded</string>
    <string name="information">Information</string>
	<string name="wifi_not_connected_msg">You are not connected to a WiFi network. \n\nPlease connect to one, before trying to activate HosTaGe.</string>
	<string name="network_not_connected_msg">You are not connected to any network. \n\nPlease connect to one, before trying to activate HosTaGe.</string>
	<string name="no_network_connection_threatmap_msg">Currently you are not connected to the Internet.\n\nPlease establish a connection to use the Threatmap.</string>
    <string name="profile_no_services_msg">The current active profile does not seem to monitor any services.\n\nPlease activate some services to monitor in the profile.</string>
    <string name="no_portbinder_msg">Your device does not have \'Portbinder\' installed. Due to the limitations of Android OS, you could only use services that are utilizing ports > 1024.\n\nTo enable full functionality of HosTaGe, please make sure your device is rooted and \'Portbinder\' is installed.</string>
    <string name="no_portbinder_msg2">Your device cannot use the full feature of HosTaGe yet. Click \'Help\' to find out how to enable this.</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="not_rooted">Your device does not have root access. To unlock full functionality of HosTaGe, a rooted device is required.</string>
    <string name="help">Help</string>
    <string name="hex_packet" translatable="false">HEX</string>
    <string name="text_packet" translatable="false">TEXT</string>
    <string name="confirm">Confirm</string>
	<string name="ok" translatable="false">OK</string>
    <string name="how">How?</string>
    <string name="portbinder" translatable="false">Portbinder</string>
    <string name="portbinder_tutorial">Video Tutorial</string>
    <string name="portbinder_website">Visit Website</string>
    <string name="helpPortbinder">Please follow the instructions in our website to install \'Portbinder\'.\n\nAlternatively, you can use the automated installer by pressing the \'Just Help Me!\' button.</string>
    <string name="confirm_msg">This automated installer fetches the appropriate Portbinder binary and installs in a hostage.location within the device.\n\nThis automated process will CHANGE some folder permissions to work. Proceed on your own risk.\n\nConfirm to proceed with automated installation of Portbinder?</string>
    <string name="help_me">Just Help Me!</string>
	<string name="honeypot_not_monitoring">Zzz…</string>
	<string name="honeypot_no_threat">Looks safe!</string>
	<string name="honeypot_past_threat">This doesn\'t look safe…</string>
	<string name="honeypot_live_threat">Under attack!!!</string>
    <string name="hostage_not_monitoring">HosTaGe is not active.</string>
    <string name="hostage_no_threat">Everything looks fine!</string>
    <string name="hostage_past_threat">Network has been infected in previous session!</string>
    <string name="hostage_live_threat">Network is infected!</string>
	<string name="profile_needs_name">An profile needs a name. Please type in a name and press save again.</string>
    <string name="monitor_current_connection">Monitor current connection</string>
    <string name="active_profile">Active profile: </string>
    <string name="ssid">SSID:</string>
    <string name="bssid">BSSID:</string>
	<string name="protocol">Protocol:</string>
	<string name="timestamp">Timestamp:</string>
	<string name="hostage.location" tools:ignore="ExtraTranslation">Location:</string>
    <string name="internal_ip">Internal IP:</string>
	<string name="subnet_mask">Subnet Mask:</string>
    <string name="external_ip">External IP:</string>
	<string name="remote_ip">Remote IP:</string>
	<string name="packet_type">Packet type:</string>
	<string name="packet_content">Packet content:</string>
    <string name="services">Services</string>
    <string name="connections">Recorded connections:</string>
    <string name="statistics">Statistics</string>
    <string name="database">Database</string>
	<string name="log_actions">Actions</string>
	<string name="firstAttack">First Attack:</string>
	<string name="lastAttack">Last Attack:</string>
	<string name="clear">Clear</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="close">Close</string>
	<string name="show_records">Show records</string>
	<string name="dialog_clear_database">Clear all data?</string>
	<string name="export_dialog_title">Choose Export Format</string>
    <string name="error_su" translatable="false">Could not acquire root access.\nYour device must be rooted to use default prots.</string>
    <string name="error_binaries" translatable="false">Binaries are not installed, some error occurred! Check if you gave root permissions on the app</string>
    <string name="applying_rules" translatable="false">Applying iptables rules</string>
    <string name="toast_bin_installed" translatable="false">Iptables binary files installed!</string>
    <string name="toast_bin_already_installed" translatable="false">Iptables binary files already installed!</string>
    <string name="permissiondenied_asset" translatable="false">READ/WRITE permission to storage denied. Please grant access for copying Iptables binaries.</string>
    <string name="delete_dialog_title">Delete data sets by:</string>
	<string name="dialog_clear_database_date">Delete all data before:</string>
    <string name="deleteFILTEREDAttacksTitle">Delete the filtered attack data?</string>
    <string name="deleteALLAttacksTitle">Delete all attack data?\n\nYou can delete specific attack data by filtering!</string>
	<string name="threatmap_show_records"><u>Show records</u></string>
	<string name="RecordAttackType">Type</string>
	<string name="RecordInternalAttack">Internal attack</string>
	<string name="RecordExternalAttack">External attack</string>
    <string name="RecordBSSID">BSSID</string>
    <string name="RecordSSID">SSID</string>
    <string name="RecordIP" translatable="false">IP</string>
    <string name="RecordTimestamp">Timestamp</string>
    <string name="RecordProtocol">Protocol</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_overview">Overview</string>
    <string name="drawer_threat_map">Threat Map</string>
    <string name="drawer_records">Records</string>
    <string name="drawer_services">Services</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_profile_manager">Profiles</string>
    <string name="drawer_app_info">About</string>
	<string name="drawer_statistics">Statistics</string>
	<string name="drawer_help">Help videos</string>
    <string name="button_title_apply">Apply</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="shared_preference_path">dk.aau.netsec.hostage.preferences</string>
    <string name="UUID">9fc4f490-659e-11e3-949a-0800200c9a66</string>
    <string name="recorded_attacks">recorded attacks: </string>
    <string name="open_ports" translatable="false">port:</string>
    <string name="current_connection">Current connection</string>
    <string name="monitor_services">Monitor services</string>
    <string name="device_rooted">Device rooted</string>
    <string name="porthack_installed">Portbinder installed</string>
	<string name="iptables_available">Iptables available</string>
	<string name="install_porthack">Install Portbinder</string>
	<string name="uninstall_porthack">Uninstall Portbinder</string>
	<string name="porthack_explanation"><![CDATA[<h1>Portbinder</h1><p>To use protocols with ports below 1024 your device requires root privileges. HosTaGe does not run with root privileges by default. That is why a small program called Portbinder is needed that opens a socket and passes it to the main HosTaGe App.</p><p>Another technique is to redirect those ports to higher port numbers. This is achieved using Android\'s iptables. If iptables is available on your device the Portbinder is not required.</p>]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_notification">No Attacks have been recorded. Please check your filter option.</string>
    <string name="no_data_notification_no_filter">No Attacks have been recorded.</string>
    <string name="TODAY">Today</string>
    <string name="YESTERDAY">Yesterday</string>
    <string name="hostage_with_url"><a href="https://aau-network-security.github.io/HosTaGe/">HosTaGe</a></string>
    <string name="hostage_email"><a href="mailto:hostage@es.aau.dk?Subject=Inquiry">Tell us what do you think about HosTaGe</a></string>
    <string name="hostage_email_only" translatable="false">hostage@es.aau.dk</string>
    <string name="ui_dev_by">Current Funding:</string>
    <string name="core_dev_by">Core developed by</string>
    <string name="change_name_of_profile">Change the name of this profile</string>
    <string name="change_desc_of_profile">Change the description of this profile here</string>
    <string name="change_icon_of_profile">Choose an icon for this profile</string>
    <string name="general">General</string>
    <string name="profile_description">Description</string>
    <string name="rec_sortby">Sort by</string>
    <string name="rec_group_by">Group by</string>
    <string name="rec_filter_by">Filter by</string>
    <string name="project_link" translatable="false">https://github.com/aau-network-security/HosTaGe</string>
    <string name="Your_Device">Own Device Information</string>
    <string name="Change_Device_Name">Change your device name</string>
    <string name="Device_Name">Device Name</string>
    <string name="Device_Status">Device Status</string>
    <string name="Wifi_Direct_Not_suppported">Your device does not support Wifi Direct.</string>
    <string name="Available_Devices">Available Devices</string>
    <string name="Looking_For_Devices_Progress_Title">Scanning for other devices.</string>
	<string name="record_details_received">RECEIVED</string>
	<string name="record_details_nocontent">No content</string>
    <string name="profile_monitor_ghost">Monitor GHOST</string>
    <string name="profile_activate_ghost">Activate GHOST monitoring</string>
    <string name="profile_activate_ghost_summary">This protocol mirrors an incoming connection back to the attacker on the same port, that it is running on</string>
    <string name="profile_mirror_ghost">Mirror GHOST ports</string>
    <string name="profile_mirror_ghost_summary">Mirrors the traffic on the given ports. Separate them by \',\'</string>
    <string name="profile_monitor_protocols">Monitor protocols</string>
    <string name="profile_activate_protocols_summary">Activate the protocols that should be monitored by HosTaGe</string>
    <string name="profile_warning">Please note, that this profile can\'t be edited. If you make any changes to this profile, a new profile will be created.</string>
    <string name="export_to_storage" translatable="false">Export to storage</string>
</resources>