<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="7.93"
		android:padding="10dp">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/record_details_received"
			android:id="@+id/record_conversation_type"
			android:layout_marginRight="10dp"
			android:background="@drawable/records_detail_received_indicator"
			android:textColor="#FFFFFFFF"
			android:paddingTop="2dp"
			android:paddingRight="5dp"
			android:paddingBottom="2dp"
			android:paddingLeft="5dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text=""
			android:id="@+id/record_conversation_info"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/record_conversation_type"
			android:textColor="@color/dark_grey"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/record_details_nocontent"
			android:id="@+id/record_conversation_content"
			android:typeface="monospace"
			android:singleLine="false"
			android:textIsSelectable="true"
			android:maxLines="8"
			android:scrollbars="vertical"
			android:layout_below="@+id/record_conversation_info"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_marginStart="220dp"
		android:layout_marginTop="10dp"
		>
		<Button android:layout_width="64dp"
			android:layout_height="40dp"
			android:text="@string/text_packet"
			android:textSize="12sp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@color/dark_cyan"
			android:id="@+id/text_id_received"
			android:layout_gravity="bottom"
			android:gravity="center"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

		<Button android:layout_width="56dp"
			android:textColor="@color/dark_red"
			android:layout_height="40dp"
			android:text="@string/hex_packet"
			android:textSize="12sp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:id="@+id/hex_id_received"
			android:layout_gravity="bottom"
			android:gravity="center"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
	</LinearLayout>

</RelativeLayout>
